deploy/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aegisops-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - api.aegisops.io
    secretName: aegisops-tls
  rules:
  - host: api.aegisops.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aegisops-backend
            port:
              number: 8000
